--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,23 +9,6 @@
   <artifactId>dbm-cmdline-sample</artifactId>
   <version>0.0.1</version>
   <name>DBM API Examples</name>
-  <dependencies>
-   <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-doubleclickbidmanager</artifactId>
-      <version>v1-rev29-1.20.0</version>
-    </dependency>
-      <dependency>
-      <groupId>com.google.oauth-client</groupId>
-      <artifactId>google-oauth-client-jetty</artifactId>
-      <version>1.20.0</version>
-    </dependency>
-        <dependency>
-      <groupId>com.google.http-client</groupId>
-      <artifactId>google-http-client-jackson2</artifactId>
-      <version>1.19.0</version>
-    </dependency>
-  </dependencies>
   <build>
     <plugins>
       <plugin>
@@ -39,4 +22,26 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+   <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-doubleclickbidmanager</artifactId>
+      <version>v1-rev48-1.22.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>${project.http.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>${project.oauth.version}</version>
+    </dependency>
+  </dependencies>
+  <properties>
+    <project.http.version>1.22.0</project.http.version>
+    <project.oauth.version>1.22.0</project.oauth.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
